Added Post and Triangle endpoints. Improved gitignore and README
